# parking-tracker

./: .claudeignore  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  samconfig.toml  template.yaml
.claude/: settings.local.json
frontend/: index.html  privacy.html  terms.html  unsubscribe.html
frontend/css/: styles.css
frontend/js/: api.js  app.js
mobile/: app.json  package-lock.json  package.json
mobile/app/: _layout.tsx  index.tsx  settings.tsx  subscribe.tsx
mobile/app/onboarding/: index.tsx
mobile/services/: api.ts  auth.ts  notifications.ts  storage.ts
src/: requirements.txt
src/parking_checker/: __init__.py  config.py  handler.py  notifier.py  push_notifier.py  scraper.py  secrets.py
src/shared/: __init__.py  db.py  devices.py
src/web_api/: __init__.py  devices.py  handler.py  invitation.py  routes.py  subscribe.py  tokens.py  validators.py
tests/: conftest.py  test_handler.py  test_scraper.py  test_tokens.py  test_web_api.py
